<package>
  <name>laser_free_to_cloud</name>
  <version>1.6.4</version>
  <description>
    This package contains a class for extracting the free parts from a 2D laser scan as defined by
    sensor_msgs/LaserScan into a point cloud as defined by sensor_msgs/PointCloud
    or sensor_msgs/PointCloud2. In particular, it contains functionality to account
    for the skew resulting from moving robots or tilting laser scanners.
    Based on laser_geometry by Tully Foote and Radu Bogdan Rusu.
  </description>
  <maintainer email="margaridaCostaFaria@gmail.com">Margarida Faria</maintainer>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>MIT</license>

  <author>Margarida Faria</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <test_depend>rosunit</test_depend>
</package>
